--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
