--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
     "next": "15.4.4",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-use-measure": "^2.1.7",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
